test/indexReplaceError3.slq

def main(){
	i:=0;
	a:=(0,1):ğ”¹^2;
	b:=(0,1):ğ”¹^2;
	(a[i],a[i+1]):=(a[i],b[i+1]); // error
	return a;
}
